Added soya map
